chore: update api sample code to align with SDK

--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/custom.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/custom.template
@@ -26,11 +26,11 @@ const teamsFx = new teamsfxSdk.TeamsFx();
 
 const authProvider = new CustomAuthProvider(
   // You can also add customized settings to .env.teamsfx.local and use TeamsFx.getConfig("{setting_name}") to read the settings. For example:
-  //  teamsFx.getConfig("API_{{capitalName}}_CUSTOM_PROPERTY"),
-  //  teamsFx.getConfig("API_{{capitalName}}_CUSTOM_VALUE")
+  //  teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_CUSTOM_PROPERTY"),
+  //  teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_CUSTOM_VALUE")
   "customPropery",
   "customValue"
 );
 // Initializes a new axios instance to call {{config.APIName}} API.
-const {{config.APIName}}Client = teamsfxSdk.createApiClient(teamsFx.getConfig("API_{{capitalName}}_ENDPOINT"), authProvider);
+const {{config.APIName}}Client = teamsfxSdk.createApiClient(teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_ENDPOINT"), authProvider);
 export { {{config.APIName}}Client };
