--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/basic.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/basic.template
@@ -4,8 +4,8 @@ const teamsfxSdk = require("@microsoft/teamsfx");
 const teamsFx = new teamsfxSdk.TeamsFx();
 // Initializes a new axios instance to call {{config.APIName}} API
 const authProvider = new teamsfxSdk.BasicAuthProvider(
-  teamsFx.getConfig("API_{{capitalName}}_USERNAME"),
-  teamsFx.getConfig("API_{{capitalName}}_PASSWORD")
+  teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_USERNAME"),
+  teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_PASSWORD")
 );
-const {{config.APIName}}Client = teamsfxSdk.createApiClient(teamsFx.getConfig("API_{{capitalName}}_ENDPOINT"), authProvider);
+const {{config.APIName}}Client = teamsfxSdk.createApiClient(teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_ENDPOINT"), authProvider);
 export { {{config.APIName}}Client };
