chore: format code

--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/aad.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/aad.template
@@ -19,5 +19,8 @@ const authProvider = new teamsfxSdk.BearerTokenAuthProvider(
   // Please replace '<your-api-scope>' with actual api scope value.
   async () => (await appCredential.getToken("<your-api-scope>"))?.token
 );
-const {{config.APIName}}Client = teamsfxSdk.createApiClient(teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_ENDPOINT"), authProvider);
+const {{config.APIName}}Client = teamsfxSdk.createApiClient(
+  teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_ENDPOINT"),
+  authProvider
+);
 export { {{config.APIName}}Client };
