--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/custom.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/custom.template
@@ -35,5 +35,8 @@ const authProvider = new CustomAuthProvider(
   "customValue"
 );
 // Initializes a new axios instance to call {{config.APIName}} API.
-const {{config.APIName}}Client = createApiClient(teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_ENDPOINT"), authProvider);
+const {{config.APIName}}Client = createApiClient(
+  teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_ENDPOINT"),
+  authProvider
+);
 export { {{config.APIName}}Client };
