--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/basic.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/basic.template
@@ -1,8 +1,8 @@
 import { TeamsFx, createApiClient, BasicAuthProvider } from "@microsoft/teamsfx";
 
-// Loads current app's configuration
+// Loads current app's configuration.
 const teamsFx = new TeamsFx();
-// Initializes a new axios instance to call {{config.APIName}} API
+// Initializes a new axios instance to call {{config.APIName}} API.
 const authProvider = new BasicAuthProvider(
   teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_USERNAME"),
   teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_PASSWORD")
