--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/cert.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/cert.template
@@ -13,5 +13,5 @@ const authProvider = new CertificateAuthProvider(
   // If you have a .pfx cert, you can use 'createPfxCertOption' function to initialize your cert option.
   createPemCertOption("<your-cert>", "<your-private-key>")
 );
-const {{config.APIName}}Client = createApiClient(teamsFx.getConfig("API_{{capitalName}}_ENDPOINT"), authProvider);
+const {{config.APIName}}Client = createApiClient(teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_ENDPOINT"), authProvider);
 export { {{config.APIName}}Client };
