--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -464,6 +464,11 @@
         "enablement": "!fx-extension.isSPFx && !fx-extension.isM365"
       },
       {
+        "command": "fx-extension.addFeature",
+        "title": "%teamstoolkit.commands.addFeature.title%",
+        "enablement": "!fx-extension.isSPFx && !fx-extension.isM365 && fx-entension.gaPreviewEnabled"
+      },
+      {
         "command": "fx-extension.openManifest",
         "title": "%teamstoolkit.commands.editManifest.title%"
       },
@@ -921,6 +926,12 @@
         "title": "Experimental Features",
         "order": 3,
         "properties": {
+          "fx-extension.enableGAPreviewFeatures": {
+            "order": 0,
+            "type": "boolean",
+            "description": "Enable GA related features including notification bot, M365 app, existing app etc. (requires reload of VS Code)",
+            "default": false
+          },
           "fx-extension.enableNotification / CommandAndResponseBot": {
             "type": "boolean",
             "description": "Enable notification bot and command and response bot. (requires reload of VS Code)",
