--- a/templates/function-base/js/default/package.json
+++ b/templates/function-base/js/default/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@microsoft/teamsfx": "^0.6.1",
+    "@microsoft/teamsfx": "0.6.2-alpha.0",
     "isomorphic-fetch": "^3.0.0"
   },
   "devDependencies": {
