--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -152,12 +152,12 @@
           "group": "deploy@0"
         },
         {
-          "command": "fx-extension.updatePreviewFile",
+          "command": "fx-extension.deployManifestFromCtxMenu",
           "when": "fx-extension.isDeployManifestEnabled && resourceFilename =~ /^manifest.(local|remote).template.json$/ && !fx-extension.isConfigUnifyEnabled",
           "group": "deploy@0"
         },
         {
-          "command": "fx-extension.updatePreviewFile",
+          "command": "fx-extension.deployManifestFromCtxMenu",
           "when": "fx-extension.isDeployManifestEnabled && resourceFilename == manifest.template.json && fx-extension.isConfigUnifyEnabled",
           "group": "deploy@0"
         }
@@ -311,6 +311,10 @@
       "commandPalette": [
         {
           "command": "fx-extension.signOut",
+          "when": "false"
+        },
+        {
+          "command": "fx-extension.deployManifestFromCtxMenu",
           "when": "false"
         },
         {
@@ -589,6 +593,10 @@
         "command": "fx-extension.updatePreviewFile",
         "title": "%teamstoolkit.commands.updateManifest.title%",
         "icon": "$(sync)"
+      },
+      {
+        "command": "fx-extension.deployManifestFromCtxMenu",
+        "title": "%teamstoolkit.commands.deployManifest.ctxMenu.title%"
       },
       {
         "command": "fx-extension.addEnvironment",
