--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/comment.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/comment.template
@@ -21,7 +21,7 @@ TEAMSFX_API_{{capitalName}}_TENANT_ID
 TEAMSFX_API_{{capitalName}}_CLIENT_ID
 TEAMSFX_API_{{capitalName}}_CLIENT_SECRET
     {{/if}}
-{{else if (equals config.AuthConfig.AuthType "apiKey")}}
+{{else if (equals config.AuthConfig.AuthType "apikey")}}
 TEAMSFX_API_{{capitalName}}_API_KEY
 {{/if}}
 
