--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/aad.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/aad.template
@@ -12,17 +12,17 @@ const teamsFx = new TeamsFx(IdentityType.App);
 const teamsFx = new TeamsFx(IdentityType.App, {
   // You can replace the default authorityHost url with actual value per your requirement.
   authorityHost: "https://login.microsoftonline.com",
-  tenantId: process.env.TEAMSFX_API_{{capitalName}}_TENANT_ID,
-  clientId: process.env.TEAMSFX_API_{{capitalName}}_CLIENT_ID,
+  tenantId: process.env.TEAMSFX_API_{{capitalName}}_TENANT_ID!,
+  clientId: process.env.TEAMSFX_API_{{capitalName}}_CLIENT_ID!,
   // Please add your client secret to .env.teamsfx.local before local debugging.
-  clientSecret: process.env.TEAMSFX_API_{{capitalName}}_CLIENT_SECRET,
+  clientSecret: process.env.TEAMSFX_API_{{capitalName}}_CLIENT_SECRET!,
 });
 {{/if}}
 // Initializes a new axios instance to call {{config.APIName}} API.
 const appCredential = teamsFx.getCredential();
 const authProvider = new BearerTokenAuthProvider(
   // Please replace '<your-api-scope>' with actual api scope value.
-  async () => (await appCredential.getToken("<your-api-scope>"))?.token
+  async () => (await appCredential.getToken("<your-api-scope>"))!.token
 );
 const {{config.APIName}}Client = createApiClient(
   teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_ENDPOINT"),
