--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/cert.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/cert.template
@@ -4,8 +4,8 @@ const teamsfxSdk = require("@microsoft/teamsfx");
 const teamsFx = new teamsfxSdk.TeamsFx();
 // Initializes a new axios instance to call {{config.APIName}} API.
 const authProvider = new teamsfxSdk.CertificateAuthProvider(
-  // Please add code to read your cert and private key, replace '<your-cert>' and '<your-private-key>' with actual value.
-  // If you have a .pfx cert, you can use 'createPfxCertOption' function to initialize your cert option.
+  // Please add code to read your cert and private key, replace "<your-cert>" and "<your-private-key>" with actual value.
+  // If you have a .pfx cert, you can use "createPfxCertOption" function to initialize your cert option.
   teamsfxSdk.createPemCertOption("<your-cert>", "<your-private-key>")
 );
 const {{config.APIName}}Client = teamsfxSdk.createApiClient(
