--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-server",
-  "version": "0.0.6",
+  "version": "0.1.0-rc.0",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
@@ -97,8 +97,8 @@
     "@azure/core-http": "^1.2.0",
     "@azure/identity": "^1.3.0",
     "@azure/ms-rest-nodeauth": "^3.1.1",
-    "@microsoft/teamsfx-api": "^0.17.2",
-    "@microsoft/teamsfx-core": "^1.7.0",
+    "@microsoft/teamsfx-api": "^0.18.0-rc.0",
+    "@microsoft/teamsfx-core": "^1.8.0-rc.0",
     "@types/ws": "^8.2.0",
     "adm-zip": "^0.5.5",
     "ajv": "^8.5.0",
