--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/headerComment.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/headerComment.template
@@ -6,7 +6,8 @@ Your next steps:
 2. Add your user password to TEAMSFX_API_{{capitalName}}_PASSWORD in "{{component}}/.env.teamsfx.local".
 {{else if (equals config.AuthConfig.AuthType "aad")}}
     {{#if (equals config.AuthConfig.ReuseTeamsApp false)}}
-2. Add your client secret to TEAMSFX_API_{{capitalName}}_CLIENT_SECRET in "{{component}}/.env.teamsfx.local".
+2. Replace "<your-api-scope>" in this file with actual scope required by the API.
+3. Add your client secret to TEAMSFX_API_{{capitalName}}_CLIENT_SECRET in "{{component}}/.env.teamsfx.local".
     {{else}}
 2. Replace "<your-api-scope>" in this file with actual scope required by the API.
 3. Gain consent of the required scope.
@@ -14,7 +15,7 @@ Your next steps:
    You can visit https://aka.ms/teamsfx-aad-manifest to learn more about the AAD app template.
     {{/if}}
 {{else if (equals config.AuthConfig.AuthType "apikey")}}
-2. Add your API Key to TEAMSFX_API_{{capitalName}}_APIKEY in "{{component}}/.env.teamsfx.local".
+2. Add your API Key to TEAMSFX_API_{{capitalName}}_API_KEY in "{{component}}/.env.teamsfx.local".
 {{else if (equals config.AuthConfig.AuthType "cert")}}
 2. Add code to read your cert content and replace "<your-cert>" and "<your-private-key>" with actual value.
 {{else if (equals config.AuthConfig.AuthType "custom")}}
