--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/apikey.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/apikey.template
@@ -5,7 +5,7 @@ const teamsFx = new TeamsFx();
 // Initializes a new axios instance to call {{config.APIName}} API.
 const authProvider = new ApiKeyProvider(
   "{{config.AuthConfig.Name}}",
-  teamsFx.getConfig("TEAMSFX_API_FAKE_API_KEY"),
+  teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_API_KEY"),
 {{#if (equals config.AuthConfig.Location "request header")}}
   ApiKeyLocation.Header
 {{else}}
