chore: add code owner

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -119,3 +119,5 @@
 /.github/workflows/cd.yml @adashen @LongOddCode @IvanJobs @qinezh @wenytang-ms
 
 /packages/server @chagong @Alive-Fish @jayzhang
+
+/Localize @HuihuiWu-Microsoft
