fix: cli async security alert

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -113,9 +113,9 @@
     "@microsoft/teamsfx-core": "^1.8.0-rc.0",
     "adm-zip": "^0.5.5",
     "applicationinsights": "^1.8.10",
+    "async": "^2.6.4",
     "async-mutex": "^0.3.1",
     "axios": "^0.21.1",
-    "azure-arm-resource": "^7.4.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -123,7 +123,6 @@
     "glob": "^7.1.6",
     "inquirer": "^8.0.0",
     "md5": "^2.3.0",
-    "ms-rest-azure": "^3.0.0",
     "node-machine-id": "^1.1.12",
     "open": "^8.2.1",
     "tedious": "^14.3.0",
