--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/aad.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/aad.template
@@ -23,4 +23,4 @@ const {{config.APIName}}Client = teamsfxSdk.createApiClient(
   teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_ENDPOINT"),
   authProvider
 );
-export { {{config.APIName}}Client };
+module.exports.{{config.APIName}}Client = {{config.APIName}}Client;
