--- a/templates/bot/ts/notification-restify/package.json
+++ b/templates/bot/ts/notification-restify/package.json
@@ -24,6 +24,7 @@
     "restify": "^8.5.1"
   },
   "devDependencies": {
+    "@types/node": "^14.18.0",
     "@types/restify": "8.4.2",
     "env-cmd": "^10.1.0",
     "nodemon": "^2.0.7",
