--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/headerComment.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/headerComment.template
@@ -10,9 +10,7 @@ Your next steps:
 3. Add your client secret to TEAMSFX_API_{{capitalName}}_CLIENT_SECRET in "{{component}}/.env.teamsfx.local".
     {{else}}
 2. Replace "<your-api-scope>" in this file with actual scope required by the API.
-3. Gain consent of the required scope.
-4. Add the scope to "templates/appPackage/aad.template.json" in this project.
-   You can visit https://aka.ms/teamsfx-aad-manifest to learn more about the AAD app template.
+3. Refer https://aka.ms/teamsfx-connect-api-with-aad for configuring AAD app and consent scopes.
     {{/if}}
 {{else if (equals config.AuthConfig.AuthType "apikey")}}
 2. Add your API Key to TEAMSFX_API_{{capitalName}}_API_KEY in "{{component}}/.env.teamsfx.local".
