chore: support ga branch

--- a/.github/workflows/cicd_test_trigger.yml
+++ b/.github/workflows/cicd_test_trigger.yml
@@ -3,7 +3,7 @@ name: TeamsFx-CICD-Test Triggers
 on:
   workflow_run:
     workflows: ["CD"]
-    branches: ["main", "dev"]
+    branches: ["main", "dev", "ga"]
     types: ["completed"]
 
 jobs:
