--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -124,7 +124,7 @@ jobs:
           python .github/detect/sensitive-detect.py diff
   
   schedule-check-sensitive-content:
-    if: ${{ github.event_name == 'schedule' && (github.ref == 'refs/heads/dev'|| github.ref == 'refs/heads/main') }}
+    if: ${{ github.event_name == 'schedule' && (github.ref == 'refs/heads/dev'|| github.ref == 'refs/heads/main' || github.ref == 'refs/heads/ga') }}
     runs-on: ubuntu-latest
     steps:
       - name: checkout branch
