--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       preid:
-        description: "preid name(alpha, rc, stable)"
+        description: "preid name(beta, rc, stable)"
         required: true
         default: "rc"
       skip-version-rc:
@@ -24,27 +24,27 @@ jobs:
 
     steps:
       - name: Validate CD branch
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/heads/hotfix/') && github.ref != 'refs/heads/dev' }}
+        if: ${{ github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/heads/hotfix/') && github.ref != 'refs/heads/ga' }}
         run: |
-          echo It's not allowed to run CD on other branch except main and dev.
+          echo It's not allowed to run CD on other branch except main and ga.
           exit 1
 
       - name: Validate inputs for main or hotfix
         if: ${{ github.event_name == 'workflow_dispatch' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/hotfix/')) && github.event.inputs.preid != 'rc' && github.event.inputs.preid != 'stable' }}
         run: |
-          echo It's not allowed to release alpha on main branch.
+          echo It's not allowed to release beta on main branch.
           exit 1
 
-      - name: Valiadte inputs for dev
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/dev' && github.event.inputs.preid != 'alpha' }}
+      - name: Valiadte inputs for ga
+        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/ga' && github.event.inputs.preid != 'beta' }}
         run: |
-          echo It's not allowed to release RC or stable on dev branch.
+          echo It's not allowed to release RC or stable on ga branch.
           exit 1
 
       - name: Validate schedule
-        if: ${{ github.event_name == 'schedule' && github.ref != 'refs/heads/dev' }}
+        if: ${{ github.event_name == 'schedule' && github.ref != 'refs/heads/ga' }}
         run: |
-          echo It's not allowed to run schedule release except dev branch.
+          echo It's not allowed to run schedule release except ga branch.
           exit 1
 
       - name: Checkout branch
@@ -82,10 +82,10 @@ jobs:
           git config --global user.name 'MSFT-yiz'
           git config --global user.email 'yiz@microsoft.com'
 
-      - name: release alpha npm packages to npmjs.org
-        if: ${{ github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/dev' && github.event.inputs.preid == 'alpha')}}
+      - name: release beta npm packages to npmjs.org
+        if: ${{ github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/ga' && github.event.inputs.preid == 'beta')}}
         run: |
-          npx lerna version prerelease --preid=alpha.$(git rev-parse --short HEAD) --exact --no-push --allow-branch dev --yes
+          npx lerna version prerelease --preid=beta.$(git rev-parse --short HEAD) --exact --no-push --allow-branch ga --yes
 
       - name: version rc npm packages to npmjs.org
         if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'rc' && github.ref == 'refs/heads/main' && github.event.inputs.skip-version-rc == 'no'}}
@@ -130,19 +130,19 @@ jobs:
 
       - name: update tag
         uses: richardsimko/update-tag@v1
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'alpha') }}
+        if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'beta') }}
         with:
-          tag_name: "templates-0.0.0-alpha"
+          tag_name: "templates-0.0.0-beta"
         env:
           GITHUB_TOKEN: ${{ secrets.CD_PAT }}
 
-      - name: release templates' alpha version to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'alpha') }}
+      - name: release templates' beta version to github
+        if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'beta') }}
         uses: ncipollo/release-action@v1.7.3
         with:
           token: ${{ secrets.CD_PAT }}
           prerelease: true
-          tag: "templates-0.0.0-alpha"
+          tag: "templates-0.0.0-beta"
           artifacts: ${{ runner.temp }}/teamsfx_templates/*.zip
           allowUpdates: true
 
@@ -198,10 +198,10 @@ jobs:
           command: |
             bash ./.github/scripts/download-simpleauth.sh
 
-      - name: publish alpha release to npm org
-        if: ${{ github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/dev' && github.event.inputs.preid == 'alpha')}}
+      - name: publish beta release to npm org
+        if: ${{ github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/ga' && github.event.inputs.preid == 'beta')}}
         run: |
-          npx lerna publish from-package --dist-tag=alpha --yes --allow-branch dev
+          npx lerna publish from-package --dist-tag=beta --yes --allow-branch ga
 
       - name: update cli ai key
         if: ${{ github.event_name == 'workflow_dispatch' && (github.event.inputs.preid == 'stable'||github.event.inputs.preid == 'rc') }}
@@ -248,7 +248,7 @@ jobs:
             npm run package
 
       - name: release daily server bits to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, '@microsoft/teamsfx-server') && github.ref == 'refs/heads/dev'  }}
+        if: ${{ contains(steps.version-change.outputs.CHANGED, '@microsoft/teamsfx-server') && github.ref == 'refs/heads/ga'  }}
         uses: ncipollo/release-action@v1.7.3
         with:
           token: ${{ secrets.CD_PAT }}
@@ -287,7 +287,7 @@ jobs:
             npx vsce package
 
       - name: release daily VSCode extension to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && github.ref == 'refs/heads/dev'  }}
+        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && github.ref == 'refs/heads/ga'  }}
         uses: ncipollo/release-action@v1.7.3
         with:
           token: ${{ secrets.CD_PAT }}
