fix: update filter for navigation button

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -294,7 +294,7 @@
       "editor/title": [
         {
           "command": "fx-extension.openPreviewFile",
-          "when": "resourceFilename == manifest.local.template.json || resourceFilename == manifest.remote.template.json",
+          "when": "resourceFilename == manifest.local.template.json || resourceFilename == manifest.remote.template.json || resourceFilename == manifest.template.json",
           "group": "navigation"
         },
         {
