--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -480,7 +480,7 @@
       {
         "command": "fx-extension.addFeature",
         "title": "%teamstoolkit.commands.addFeature.title%",
-        "enablement": "!fx-extension.isSPFx && !fx-extension.isM365 && fx-entension.previewFeaturesEnabled"
+        "enablement": "!fx-extension.isSPFx && fx-entension.previewFeaturesEnabled"
       },
       {
         "command": "fx-extension.openManifest",
