--- a/packages/adaptivecards-tools-sdk/package.json
+++ b/packages/adaptivecards-tools-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/adaptivecards-tools",
-  "version": "0.1.6-rc.0",
+  "version": "0.1.6-rc.1",
   "description": "Microsoft sdk for Adaptive Cards",
   "main": "lib/index.js",
   "types": "types/index.d.ts",
@@ -40,12 +40,12 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@types/react": "^17.0.14",
     "adaptive-expressions": "^4.15.0",
     "adaptivecards": "^2.10.0",
     "adaptivecards-templating": "^2.1.0",
     "markdown-it": "^12.2.0",
-    "react": "^17.0.2",
-    "@types/react": "^17.0.14"
+    "react": "^17.0.2"
   },
   "publishConfig": {
     "access": "public"
