--- a/templates/package.json
+++ b/templates/package.json
@@ -1,6 +1,6 @@
 {
     "name": "templates",
-    "version": "0.7.0-rc.2",
+    "version": "0.7.0",
     "private": "true",
     "license": "MIT",
     "scripts": {
