--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -49,7 +49,7 @@
     "@azure/identity": "^2.0.1",
     "@azure/msal-browser": "^2.21.0",
     "@azure/msal-node": "~1.1.0",
-    "@microsoft/adaptivecards-tools": "^0.1.6-rc.1",
+    "@microsoft/adaptivecards-tools": "^0.1.6",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "axios": "^0.24.0",
     "botbuilder": ">=4.15.0 <5.0.0",
