--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -48,7 +48,7 @@ jobs:
           exit 1
 
       - name: Validate schedule
-        if: ${{ github.event_name == 'schedule' && (github.ref != 'refs/heads/dev' || github.ref != 'refs/heads/ga') }}
+        if: ${{ github.event_name == 'schedule' && !(github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/ga') }}
         run: |
           echo It's not allowed to run schedule release except dev or ga branch.
           exit 1
