chore(m365): open bot framework portal in a private window
- open bot framework portal in a private window to avoid already signing in a wrong account

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -1213,6 +1213,7 @@
     "jsonschema": "^1.4.0",
     "lodash": "^4.17.21",
     "log4js": "^6.3.0",
+    "open": "^8.4.0",
     "read-package-json-fast": "^2.0.3",
     "sudo-prompt": "^9.2.1",
     "underscore": "^1.12.1",
