--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -60,6 +60,7 @@
     "@types/mock-fs": "^4.13.1",
     "@types/mustache": "^4.1.2",
     "@types/node": "^14.14.21",
+    "@types/proxyquire": "^1.3.28",
     "@types/sinon": "^9.0.10",
     "@types/tedious": "^4.0.3",
     "@types/underscore": "^1.11.0",
@@ -89,6 +90,7 @@
     "nyc": "^15.1.0",
     "path-browserify": "^1.0.1",
     "prettier": "^2.4.1",
+    "proxyquire": "^2.1.3",
     "sass-loader": "^11.1.1",
     "sinon": "^9.2.2",
     "source-map-support": "^0.5.19",
