--- a/templates/bot/ts/notification-restify/package.json
+++ b/templates/bot/ts/notification-restify/package.json
@@ -7,7 +7,7 @@
     "main": "./lib/index.js",
     "scripts": {
         "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
-        "dev": "nodemon --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./src/index.ts",
+        "dev": "nodemon --watch ./src --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./src/index.ts",
         "build": "tsc --build",
         "start": "node ./lib/src/index.js",
         "watch": "nodemon --watch ./src --exec \"npm run start\"",
