--- a/packages/simpleauth/package.json
+++ b/packages/simpleauth/package.json
@@ -4,6 +4,10 @@
   "description": "The Simple Auth is a backend service helping Teams tab app access first/third party services from client side.",
   "private": "true",
   "license": "MIT",
+  "scripts": {
+    "version": "../../.github/scripts/pkg-version.sh fx-core && git add .",
+    "postversion": "../../.github/scripts/pkg-postversion.sh fx-core && git add ."
+  },
   "devDependencies": {
     "fs-extra": "^10.0.0",
     "semver": "^7.3.5",
